Fixed item description text not showing

--- a/src/css/chat.scss
+++ b/src/css/chat.scss
@@ -69,6 +69,9 @@
                     padding-right: 0;
                 }
             }
+            .card-description-content {
+                border-bottom: $groove;
+            }
         }
     }
     &.roll-card {
